@startuml Controller Class Diagram

package "controller" {
  class Controller {
    {static} addObjectEventHandler(ObjectEventHandler handler)
    {static} registerActiveObject(IActive object)
    {static} unregisterActiveObject(IActive object)
    {static} onTimeElapsed(double dT)
  }

  interface ObjectEventHandler {
    handle(Object obj, boolean added)
  }
  
  class RandomProvider {
    {static} nextRand() : double
  }
}
Controller "1" --> "activeObjects *" IActive
Controller "1" --> "objectEventHandlers *" ObjectEventHandler

@enduml